@@ -1,4 +1,1 @@
-DIST lm4tools-0_pre20121113.tar.gz 21980 SHA256 88656ab270e9d5175ba2db7547c21db77dff0f768e9f7fccf926bb5512bbeae7 SHA512 4cef7e9dac3cc32e6d066c1e6d116af87b5a2c91a20542ef1498087c2ddf3c320bed8108fd2a87631eb7b2b334bc3564e4165d98029da0b4346ae9dfcd1cdc68 WHIRLPOOL df07a9dd5b298df3f427dc4d45e5a677f4290e5e8e520cfbe6004c2ef703a923222cb507d49a096a085fc384a429f2fd79b80967162bb116b45889fa97bc4f92
-EBUILD lm4tools-0_pre20121113.ebuild 765 SHA256 7771859987ed1536793fd569f62ba1a1f0a8f40c7f45c2cb345ed4a3cd7facd3 SHA512 bb1e1fb0543613437bfe139be0486ef199d6423f45e024310929391795d97160cb714dcb8b019aad45cfade4bf75e7c54f95ff842e016d62e20a14071722e3f1 WHIRLPOOL 63f69adfaa0d7fdb4f6d29a608f90986f0eaed1dd82b31b9769b814d27b8c26643c00c2f6765582d0605800f28229f15b92f5b5ed1ab5fd5e0c116eaa977eb6c
-MISC ChangeLog 181 SHA256 4093a05d719389f0cdc677e0bdfc59c168b31146656d771b64a92998e0d3789f SHA512 2fad70a1e54017955083e33a70fb99a90223010becd53dea3c9896f41afd5610729433e78f3e82a2079e46d1e786ec9145c8fffdc0f15bf9546fdc42c2dadb6d WHIRLPOOL 71c894e7a6d3570335d9cb2bce9d6f8fe7d513d0664a0fd27bbb256903a03e66073462babb1619cdd474f5b297a5092d37f0c00da73a197d00fb1e28f061a97f
-MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
+DIST lm4tools-0.1.2.tar.gz 25369 SHA256 2619ae4350a3a2190a12f6fae03c86a55975b85f47b891b694f0a7a17f7369a6 SHA512 ffc680d08b5c0ab9d909a6f081c49daf8f4e221873f356b4978c21634d37733a34f0eefb016bf57d035aebcc32aa0987d522fa306e87571e5d2c3059cddbb5e2 WHIRLPOOL e0a2301d38e747088ee3696d5c458d260f42e010733d46eae4deed0fa587352a7aa06d9b1c0ace6aef7da86839781d8a2cf8c15e160f22176ea2abb28da9bc4f
